[tool.poetry]
name = "pypsps"
version = "0.2.2"
description = "Predictive State Principled Subclassification (PSPS) in Python (keras)"
authors = ["ML Team <eng-ml-core@evolutioniq.com>"]
license = "Apache-2.0"
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"


[[tool.poetry.source]]
name = "eiq"
url = "https://us-python.pkg.dev/eiq-artifactory/eiq/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
tensorflow = "^2.12.1"
numpy = "^1.23.5"
pandas = "^1.5.3"
tqdm = "^4.64.1"
#tensorflow-addons = "^0.23.0"
tensorflow-probability = ">=0.19.0,<0.20.0"
tensorboard = ">=2.12,<2.13"
pypress = {version = "0.0.2", source = "eiq"}
wandb = "~0.14.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[tool.poetry.group.test.dependencies]
pytest = "~7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"